# gengo-sensei

./: .dockerignore  Cargo.toml  Dockerfile  README.md  dependencies.sh
.github/workflows/: cd.yml  ci.yml
src/: config.rs  db.rs  main.rs  middle.rs  route.rs  state.rs  utils.rs
src/db/: mariadb.rs  mongodb.rs
src/route/: v1.rs
src/route/v1/: me.rs
src/utils/: logging.rs
tools/curl/: consent
