[package]
name = "gengo-sensei"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
axum-auth = "0.8.1"
mongodb = "3.2.3"
serde = "1.0.219"
# serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio"] }
tokio = "1.45.1"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
